# content_platform

./: .env.sample  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
blog/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
blog/management/commands/: fixt_upl.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  blog_detail.html  blog_list.html  home.html
blog/templates/blog/includes/: inc_main_menu.html
blog/templatetags/: my_tags.py
config/: settings.py  urls.py
subsciptions/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
subsciptions/migrations/: 0001_initial.py
subsciptions/templates/subsciptions/: subscription_list.html  success.html
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
