[tool.poetry]
name = "content-platform"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
psycopg2 = "^2.9.9"
redis = "^5.0.8"


[tool.poetry.group.dev.dependencies]
pillow = "^10.4.0"
django-cors-headers = "^4.4.0"
black = "^24.8.0"
python-dotenv = "^1.0.1"
transliterate = "^1.10.2"
stripe = "^10.8.0"
coverage = "^7.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
